--- a/src/modules/header.pug
+++ b/src/modules/header.pug
@@ -1,3 +1,21 @@
 header
   .header
-  h1 Шапка
+    a(href="#")
+      img(src="img/logo.svg", alt="Логотип")
+    nav
+      ul.nav 
+        li.nav__item 
+          a(href="").nav__link.active О нас
+        li.nav__item 
+          a(href="").nav__link.arrow Услуги
+        li.nav__item 
+          a(href="").nav__link Вакансии
+        li.nav__item 
+          a(href="").nav__link Новости
+        li.nav__item 
+          a(href="").nav__link Соглашения
+    ul.entry
+      li.entry__item 
+        button.entry__btn.entry__btn-login
+      li.entry__item 
+        button.entry__btn.entry__btn-reg
