--- a/src/index.pug
+++ b/src/index.pug
@@ -8,6 +8,7 @@ html(lang="en")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
     title=pageTitle
     style 
+      include styles/normalize.css
       include styles/style.css
   body 
     include modules/header
